Horizontal Scrollbar fixed

--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -6,6 +6,8 @@
 body {
   background-color: #f2f2f2;
   margin: 0;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 A:link {
@@ -24,7 +26,7 @@ A:visited {
 /* Comienza Header */
 
 header {
-  width: 100vw;
+  width: 100%;
   background-color: #333333;
   height: 48px;
   margin: 0;
@@ -32,10 +34,13 @@ header {
   justify-content: space-around;
   align-items: center;
   position: fixed;
-  top: 5px;
+  top: 0;
   left: 0;
 }
-
+main {
+  width: 100vw;
+  overflow-x: hidden;
+}
 #logo-principal {
   width: 32px;
 }
@@ -70,15 +75,18 @@ header {
 /* Termina Header */
 
 .seccion-banner {
-  height: 280px;
+  width: 100%;
+  max-height: 280px;
   margin: 10px 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
-#banner-img {
-  width: 100vw;
-  object-fit: cover;
+banner-img {
+  height: 100%;
+  width: auto;
+  object-fit: contain;
 }
 
 .seccion-maquinita {
@@ -241,7 +249,7 @@ footer {
 }
 
 .info-footer {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -289,7 +297,7 @@ footer {
     /* position: relative; */
     height: 32px;
     position: fixed;
-    top: 5px;
+    top: 0;
     left: 0;
   }
 
@@ -319,7 +327,8 @@ footer {
   /* Termina Header */
 
   .seccion-banner {
-    height: 480px;
+    max-height: 480px;
+    object-fit: contain;
   }
   .seccion-maquinita {
     flex-direction: row;
@@ -413,12 +422,17 @@ footer {
   header {
     padding: 0 10%;
     position: fixed;
-    top: 5px;
+    top: 0;
     left: 0;
   }
 
   .fa-search {
     position: absolute;
     right: 22%;
+  }
+  #banner-img {
+    height: auto;
+    width: 100%;
+    object-fit: contain;
   }
 }
